--- a/index.html
+++ b/index.html
@@ -3,11 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Page</title>
+    <title>Nguyen Nhut Vu Truong - Academic Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 40px;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 800px;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px gray;
+        }
+        img {
+            width: 150px;
+            border-radius: 50%;
+        }
+        h1 {
+            color: #333;
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to my GitHub Pages website.</p>
+    <div class="container">
+        <h1>Nguyen Nhut Vu Truong</h1>
+        <h2>Biography</h2>
+        <img src="profile.jpg" alt="Your Profile Picture">
+        <p>As a PhD student specializing in finance at National Yang Ming Chiao Tung University (NYCU) in Taiwan, I am passionate about expanding my knowledge, sharing insights through teaching, and expressing myself creatively through singing.</p>
+
+        <h3>Contact Information</h3>
+        <p>Email: kingsley27101997@gmail.com</p>
+        <p>GitHub: <a href="https://github.com/Nguyen-Nhut-Vu-Truong">Nguyen-Nhut-Vu-Truong</a></p>
+       
+        <h3>Education</h3>
+        <ul>
+            <li>Ph.D. in Finance, National Yang Ming Chiao Tung University (2024 - Present)</li>
+            <li>Master of Science in Finance, Yuan Ze University (2021 - 2023)</li>
+            <li>English Bachelor of Business Administration, Yuan Ze University (2017 - 2021)</li>
+        </ul>
+    </div>
 </body>
 </html>
-
