--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Nguyen Nhut Vu Truong</h1>
+        <h1>Nguyen Nhut Vu Truong (Kingsley)</h1>
         <h2>Biography</h2>
         <img src="profile.jpg" alt="Your Profile Picture">
         <p>As a PhD student specializing in finance at National Yang Ming Chiao Tung University (NYCU) in Taiwan, I am passionate about expanding my knowledge, sharing insights through teaching, and expressing myself creatively through singing.</p>
