--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="PhD student specializing in finance at NYCU in Taiwan.">
+    <meta name="keywords" content="finance, PhD, NYCU, National Yang Ming Chiao Tung University, Taiwan">
     <title>Nguyen Nhut Vu Truong - Academic Profile</title>
     <style>
         body {
@@ -36,12 +38,12 @@
         <h1>Nguyen Nhut Vu Truong (Kingsley)</h1>
         <h2>Biography</h2>
         <img src="profile.jpg" alt="Your Profile Picture">
-        <p>As a PhD student specializing in finance at National Yang Ming Chiao Tung University (NYCU) in Taiwan, I am passionate about expanding my knowledge, sharing insights through teaching, and expressing myself creatively through singing.</p>
+        <p>As a PhD student specializing in finance at National Yang Ming Chiao Tung University (NYCU) in Taiwan, I am passionate about expanding my knowledge, sharing insights through teaching, and contributing to the field of finance.</p>
 
         <h3>Contact Information</h3>
         <p>Email: kingsley27101997@gmail.com</p>
         <p>GitHub: <a href="https://github.com/Nguyen-Nhut-Vu-Truong">Nguyen-Nhut-Vu-Truong</a></p>
-       
+
         <h3>Education</h3>
         <ul>
             <li>Ph.D. in Finance, National Yang Ming Chiao Tung University (2024 - Present)</li>
